syntax = "proto3";

import "proton/android/pass/preferences/bool_flag_pref.proto";

option java_package = "proton.android.pass.preferences";
option java_multiple_files = true;

message FeatureFlagsPreferences {
  BoolFlagPrefProto custom_fields_enabled = 1;
  BoolFlagPrefProto credit_cards_enabled = 2;
  BoolFlagPrefProto autofill_debug_mode_enabled = 3;
  BoolFlagPrefProto sharing_v1_enabled = 4;
  BoolFlagPrefProto remove_primary_vault_enabled = 5;
  BoolFlagPrefProto sharing_new_users_enabled = 6;
  BoolFlagPrefProto credit_card_autofill_enabled = 7;
}
