syntax = "proto3";

import "proton/android/pass/preferences/app_usage.proto";
import "proton/android/pass/preferences/last_item_autofill.proto";

option java_package = "proton.android.pass.preferences";
option java_multiple_files = true;

message InternalSettings {
  int64 last_unlock_time = 1;
  string declined_update_version = 2;
  int64 boot_count = 3;
  int32 home_sorting_option = 4;
  int32 autofill_sorting_option = 5;
  string selected_vault = 6; // This is now stored in selected_vault_per_user
  // int32 pin_attempts = 7; This is now stored in pin_attempts_per_user
  // int32 master_password_attempts = 8; This is now stored in master_password_attempts_per_user
  int32 item_create_count = 9;
  bool in_app_review_triggered = 10;
  AppUsage app_usage = 11;
  int32 item_autofill_count = 12;
  int32 home_filtering_option = 13;
  bool dark_web_alias_message_dismissed = 14;
  LastItemAutofill last_item_autofill = 15;
  map<string, string> selected_vault_per_user = 16;
  map<string, int32> pin_attempts_per_user = 17;
  map<string, int32> master_password_attempts_per_user = 18;
}
