syntax = "proto3";

import "proton/android/pass/preferences/theme_pref.proto";
import "proton/android/pass/preferences/clipboard_pref.proto";
import "proton/android/pass/preferences/boolean_pref.proto";

option java_package = "proton.android.pass.preferences";
option java_multiple_files = true;

message UserPreferences {
  BooleanPrefProto completed_onboarding = 1;
  BooleanPrefProto biometric_lock = 2;
  BooleanPrefProto has_authenticated_with_biometry = 3;
  ThemePrefProto theme = 4;
  BooleanPrefProto has_dismissed_autofill_banner = 5;
  BooleanPrefProto copy_totp_to_clipboard_enabled = 6;
  ClipboardPrefProto clear_clipboard_after = 7;
}
